--- a/MotorMotionControlGUI/MainWindow.xaml
+++ b/MotorMotionControlGUI/MainWindow.xaml
@@ -104,26 +104,45 @@
                     Content="Submit" Click ="ButtonSubmit" ClickMode="Release"
                 />
 
-                
-<!-- ENCODER VALUES -->
+                <!-- encoder parameter -->
+            <TextBlock x:Name="description_e" Grid.Row="5"
+                    HorizontalAlignment="Left" VerticalAlignment="Center" 
+                    TextWrapping="Wrap" Margin="10" 
+                    Grid.Column="4" Grid.ColumnSpan="2"
+                />
+
+            <TextBox  x:Name="text_e" Grid.Row="6"
+                    HorizontalAlignment="Right" VerticalAlignment="Top"
+                    Margin="10" Grid.Column="4"
+                    KeyDown="CheckKey"
+               />
+
+            <Button x:Name="button_e" Grid.Row="6"
+                    HorizontalAlignment="Left" VerticalAlignment="Top"
+                    Grid.Column="5" Margin="10" 
+                    Content="Submit" Click ="ButtonSubmit" ClickMode="Release"
+                />
+
+
+            <!-- ENCODER VALUES -->
 
             <ComboBox x:Name="portCombo" Grid.Row="3"
-                      HorizontalAlignment="Center" VerticalAlignment="Top"
+                      HorizontalAlignment="Center" VerticalAlignment="Center"
                       Grid.Column="2" Grid.ColumnSpan="2" Margin="10"
                       SelectionChanged="getPort" Text="Select COM Port"
                       IsEditable="True" IsReadOnly="True"
                     />
 
 
-            <Button x:Name="start" Grid.Row="5"
-                    HorizontalAlignment="Center" VerticalAlignment="Top"
+            <Button x:Name="start" Grid.Row="7"
+                    HorizontalAlignment="Center" VerticalAlignment="Center"
                     Grid.Column="4" Margin="10" 
                     Content="Start Motor" Click ="startStop" ClickMode="Release"
                 />
 
-            <Button x:Name="updateEncoder" Grid.Row="5"
-                    HorizontalAlignment="Center" VerticalAlignment="Top"
-                    Grid.Column="10" Margin="10" 
+            <Button x:Name="updateEncoder" Grid.Row="7"
+                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                    Grid.Column="7"  Margin="10" 
                     Content="Update Encoder Value" Click ="updateEncoderState" ClickMode="Release"
                 />
 
@@ -131,7 +150,7 @@
             <TextBlock Margin="15,15,0,0" Name="encoder1"
                 HorizontalAlignment="Stretch" VerticalAlignment="Top" 
                   TextWrapping="Wrap"
-                  Grid.Row="6" Grid.Column="4" Grid.ColumnSpan="2">
+                  Grid.Row="5" Grid.Column="4" Grid.ColumnSpan="2">
             </TextBlock>
                 
             <!-- NOT USING BELOW ENCODERS FOR THIS IMPLEMENTATION
